<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbgcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/about_rl_top"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingRight="20dp"
        android:background="@drawable/about_welcome">

        <ImageView
            android:id="@+id/about_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/about_logo"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/about_iv"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/about_welcome"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="2dp"
                android:text="@string/about_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/about_tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="2dp"
                android:text="@string/about_version"
                android:textColor="@color/darker_grey"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/about_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_rl_top"
        android:layout_above="@+id/about_iv_bottom"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_system"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_little" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/about_aboutsys"
            android:textColor="@color/darker_grey"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/about_aim"
            android:textColor="@color/darker_grey"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/about_point"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/about_aim_1"
                android:textColor="@color/darker_grey"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/about_point" 
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/about_aim_2"
                android:textColor="@color/darker_grey"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/about_point" 
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/about_aim_3"
                android:textColor="@color/darker_grey"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/about_copyright" >
	    <ImageView
	        android:id="@+id/about_iv_bottom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        	android:background="@drawable/ydlogo"
        	android:layout_centerHorizontal="true"
        	android:layout_alignParentTop="true"
        	android:layout_marginTop="20dp"
	        android:contentDescription="@null"/>
    </RelativeLayout>

</RelativeLayout>