<?xml version="1.0" encoding="utf-8"?>
<!-- haoyun -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/open_an_account_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/clcm_et_open_an_account_name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_little" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/idcard_no"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/clcm_et_idcard_no"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_little" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/open_an_account_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/clcm_et_open_an_account_number"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_little" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/clcm_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="10dp"
        android:text="@string/is_positive"
        android:textSize="@dimen/text_size_middle" />

</LinearLayout>